crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_invalid_bound_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_invalid_bound_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..103,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..21,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..15,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 7..14,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 10..14,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 11..14,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 18..21,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 22..46,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 27..28,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 28..40,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 29..39,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 29..30,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 32..39,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 38..39,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 43..46,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 47..76,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 52..53,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 53..70,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 54..69,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 54..55,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            YieldFrom(
                                                ExprYieldFrom {
                                                    node_index: NodeIndex(None),
                                                    range: 57..69,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 68..69,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 73..76,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 77..102,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 82..83,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 83..96,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 84..88,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 84..85,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 87..88,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 92..95,
                                        name: Identifier {
                                            id: Name("int"),
                                            range: 92..95,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 99..102,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[T: *int] = int
  |           ^^^^ Syntax Error: Starred expression cannot be used here
2 | type X[T: yield x] = int
3 | type X[T: yield from x] = int
  |


  |
1 | type X[T: *int] = int
2 | type X[T: yield x] = int
  |           ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | type X[T: yield from x] = int
4 | type X[T: x := int] = int
  |


  |
1 | type X[T: *int] = int
2 | type X[T: yield x] = int
3 | type X[T: yield from x] = int
  |           ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | type X[T: x := int] = int
  |


  |
2 | type X[T: yield x] = int
3 | type X[T: yield from x] = int
4 | type X[T: x := int] = int
  |             ^^ Syntax Error: Expected `,`, found `:=`
  |


## Semantic Syntax Errors

  |
1 | type X[T: *int] = int
2 | type X[T: yield x] = int
  |           ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar bound
3 | type X[T: yield from x] = int
4 | type X[T: x := int] = int
  |


  |
1 | type X[T: *int] = int
2 | type X[T: yield x] = int
3 | type X[T: yield from x] = int
  |           ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar bound
4 | type X[T: x := int] = int
  |
