crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_missing_bound.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_missing_bound.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..41,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..17,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..11,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 7..9,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        variance: None,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 14..17,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 18..40,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 23..24,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 24..34,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 25..28,
                                        name: Identifier {
                                            id: Name("T1"),
                                            range: 25..27,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        variance: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 31..33,
                                        name: Identifier {
                                            id: Name("T2"),
                                            range: 31..33,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        variance: None,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 37..40,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[T: ] = int
  |           ^ Syntax Error: Expected an expression
2 | type X[T1: , T2] = int
  |


  |
1 | type X[T: ] = int
2 | type X[T1: , T2] = int
  |            ^ Syntax Error: Expected an expression
  |
